k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unitransit
  labels:
    app.kubernetes.io/name: unitransit
    app.kubernetes.io/part-of: unitransit-platform
